Bug 376408 - XP touchup patch. r=vlad.